main page ,facility card,hotel booking card

--- a/index.html
+++ b/index.html
@@ -139,6 +139,35 @@
             <p>A hotel and restaurant investment deserves careful and market oriented financial planning and projections.</p>
         </div>
     </div>
+<!-- Image and hotel details using transition animation -->
+    <h4>Our Rooms</h4>
+    <h1> Explore Our Hotel</h1>
+    <div class="hotel-container">
+        <div class="hotel-card">
+            <img src="1.png" alt="deluxe room">
+            <div class="card-text">Deluxe Room</div>
+            <div class="price">55/day</div>
+            <!-- <button class="book-now-hotel">Booking Now</button> -->
+        </div>
+        <div class="hotel-card">
+            <img src="1.png" alt="deluxe room">
+            <div class="card-text">Deluxe Room</div>
+            <div class="price">55/day</div>
+            <!-- <button class="book-now-hotel">Booking Now</button> -->
+        </div>
+        <div class="hotel-card">
+            <img src="1.png" alt="deluxe room">
+            <div class="card-text">Deluxe Room</div>
+            <div class="price">55/day</div>
+            <!-- <button class="book-now-hotel">Booking Now</button> -->
+        </div>
+        <div class="hotel-card">
+            <img src="1.png" alt="deluxe room">
+            <div class="card-text">Deluxe Room</div>
+            <div class="price">55/day</div>
+            <!-- <button class="book-now-hotel">Booking Now</button> -->
+        </div>
+    </div>
 
     
 
